# Haskell_Project

./: project0 report.docx
Project1.hsproj/: .uuid  ParserUtils.hi  ParserUtils.hs  Project1.cabal  Q1.hi  Q1.hs  Q2.hs  _Q1.hsplay  _Q2.hsplay
Project3.hsproj/: .uuid  ParserUtils.hs  Part1.hs  Part2.hs  Project3.cabal  Project3.hs  Test.hs  _Part1.hsplay  _Project3.hsplay  _Test.hsplay
Project4.hsproj/: .uuid  ParserUtils.hs  Part_I.hs  Part_II.hs  Part_III.hs  Project4.cabal  Test.hs  _Part_I.hsplay  _Part_II.hsplay  _Part_III.hsplay  _Test.hsplay
Project5.hsproj/: .uuid  Project5.cabal  Project5.hs  Test.hs  _Project5.hsplay  _Test.hsplay
project 2.hsproj/: .uuid  ParserUtils.hs  Project_2.hs  Test.hs  _Project_2.hsplay  _Test.hsplay  project2.cabal
