name: Project4
version: 1.0
cabal-version: 1.11
build-type: Simple
license: AllRightsReserved
stability: experimental
x-ghc-framework-version: 7.10.3-5.18-2
x-last-ide-version: HfM1.3.2
Executable Project4
  main-is: Part_I.hs
  buildable: True
  build-depends:
      base -any,
      QuickCheck -any,
      random -any,
      parsec -any
  other-modules:
      Part_III
      ParserUtils
      Part_II
